--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "connect-mongo": "^1.3.2",
     "express": "^4.15.3",
     "express-session": "^1.15.4",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.4",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
+    "react-big-calendar": "^0.14.4",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2"
   },
