--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-scripts": "1.0.10"
   },
   "scripts": {
-    "start": "mode server/server.js",
+    "start": "node server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
